// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should extend processors list with list from config and use custom processors 1`] = `
Array [
  "do",
]
`;

exports[`App should process yaml file with processor 1`] = `
Object {
  "do": Object {
    "some": Object {
      "string": "aaa",
    },
  },
}
`;

exports[`App should process yaml file with proper processor with prefix 1`] = `
Array [
  "$tx-do-some-string: aaa;",
]
`;

exports[`App should return null in case of error in processing JS 1`] = `null`;

exports[`App should return null in case of error in processing yaml 1`] = `null`;
